fixed scroll on small screen

--- a/src/App.scss
+++ b/src/App.scss
@@ -63,6 +63,7 @@ a {
 
 #shop {
     position: fixed;
+    pointer-events: none;
     top: 1rem;
     right: 0;
     float: right;
@@ -71,6 +72,10 @@ a {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+
+    * {
+        pointer-events: all;
+    }
     
     #icon-cart {
         margin-right: 1rem;
@@ -715,7 +720,7 @@ section {
             height: 100%;
             display: flex;
             flex-direction: column;
-            padding: 10px 30px 60px 30px;
+            padding: 10px 30px 80px 30px;
             justify-content: space-around;
             
             h3 {
@@ -1148,12 +1153,14 @@ footer {
     #contact {
         align-items: flex-start;
         padding: 0 !important;
+        width: 100vw;
     }
 
     #contact_form {
         position: relative;
         width: 100vw !important;
-        height: 100vh !important;
+        min-height: 100vh !important;
+        height: max-content !important;
         background-color: $prime3;;
         box-shadow: $shadow;
         border-radius: 5px;
